salesfoceround/force-app/main/default/objects/Partida__c/fields/Algoritmo__c.field-meta.xml
<CustomField>
    <fullName>Algoritmo__c</fullName>
    <label>Algoritmo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>