salesfoceround/force-app/main/default/objects/Partida__c/fields/Cronometro__c.field-meta.xml
<CustomField>
    <fullName>Cronometro__c</fullName>
    <description>Cronômetro</description>
    <formula>if(ISBLANK(TerminoPartida__c), 0,
If(TerminoPartida__c &gt; now(), 0, TerminoPartida__c - now()))</formula>
    <inlineHelpText>Cronômetro</inlineHelpText>
    <label>Cronometro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>