salesfoceround/force-app/main/default/objects/Partida__c/fields/SolicitacaoInicioPartida__c.field-meta.xml
<CustomField>
    <fullName>SolicitacaoInicioPartida__c</fullName>
    <description>Usado no processoa de aprovacao de inicio a partida</description>
    <inlineHelpText>Stauts de aprovaçao</inlineHelpText>
    <label>Solicitação de Início da Partida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não solicitado</fullName>
                <default>true</default>
                <label>Não solicitado</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>