salesfoceround/force-app/main/default/objects/Partida__c/fields/TerminoPartida__c.field-meta.xml
<CustomField>
    <fullName>TerminoPartida__c</fullName>
    <description>TerminoPartida</description>
    <inlineHelpText>TerminoPartida</inlineHelpText>
    <label>Término da partida</label>
    <type>DateTime</type>
</CustomField>